# dbt-core-mcp

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  MIGRATION_GUIDE.md  README.md  README_FASTMCP.md  TESTING.md  dbt-core-mcp-guide.md  docker-compose.yml  main.py  main_fastmcp.py  pyproject.toml  requirements.txt  setup_claude.sh  test.py  test_fastmcp.py  test_local.py
.claude/: settings.local.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docker-publish.yml
src/: cache.py  dbt_parser.py  models.py  server.py  server_fastmcp.py
tests/: test_models.py  test_parser.py
tests/fixtures/: sample_dbt_project.yml  sample_schema.yml
